--- a/src/app/applications/applications-list/application-visualization/application-visualization.component.html
+++ b/src/app/applications/applications-list/application-visualization/application-visualization.component.html
@@ -1,4 +1,1 @@
-<div class="visualization-page thirty-height">
-  <p>application-visualization works!</p>
-  <app-application-visualization-failed-requests></app-application-visualization-failed-requests>
-</div>
+<div class="visualization-page thirty-height"></div>
