--- a/src/app/shared/components/column-selector/column-selector.component.html
+++ b/src/app/shared/components/column-selector/column-selector.component.html
@@ -22,6 +22,6 @@
     </mat-option>
   </mat-select>
   <button mat-icon-button type="button" class="button-margin" (click)="Selector.open()">
-    <fa-icon [icon]="cogIcon" class="cog-icon"></fa-icon>
+    <mat-icon svgIcon="table-tool" class="cog-icon"></mat-icon>
   </button>
 </div>
