--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -384,3 +384,10 @@ $red: #dc3545;
     overflow-y: hidden;
   }
 }
+
+$alert-color: #991b1b;
+$stable-color: #047857;
+$default-color: #525252;
+$default-icon-color: #404040;
+
+$selector-font-color: #737373;
