--- a/src/app/shared/components/table-pagiantor.ts/table-paginator.component.scss
+++ b/src/app/shared/components/table-pagiantor.ts/table-paginator.component.scss
@@ -1,4 +1,4 @@
-.main-container {
+:host .main-container {
   display: flex;
   flex: 1;
   justify-content: space-between;
@@ -12,7 +12,7 @@
   overflow: hidden;
 }
 
-.pages-of {
+:host .pages-of {
   height: 32px;
   line-height: 10px;
   border: 1px solid rgb(227, 224, 224);
@@ -25,7 +25,7 @@
   align-items: center;
 }
 
-.arrow-button {
+:host .arrow-button {
   height: 32px !important;
   min-width: 42px !important;
   width: 42px !important;
@@ -37,20 +37,20 @@
   justify-content: center;
 }
 
-.left-arrow {
+:host .left-arrow {
   margin-top: 8px;
   margin-left: 5px;
 }
-.right-arrow {
+:host .right-arrow {
   margin-top: 10px;
   margin-left: 1px;
 }
 
-.spacer {
+:host .spacer {
   width: 150px;
 }
 
-.mat-mdc-select {
+:host .mat-mdc-select {
   height: 25px;
   line-height: 20px;
   display: flex;
@@ -59,28 +59,28 @@
   color: #737373 !important;
 }
 
-.mat-mdc-option {
+:host .mat-mdc-option {
   font-size: 10px !important;
   color: #737373 !important;
 }
 
-.mat-mdc-select-value {
+:host .mat-mdc-select-value {
   font-size: 15px !important;
   color: #737373 !important;
 }
 
-.mat-mdc-text-field-wrapper {
+:host .mat-mdc-text-field-wrapper {
   height: 32px !important;
   display: flex;
   align-items: center;
   font-size: 10 !important;
 }
 
-.select-container {
+:host .select-container {
   min-width: 150px;
 }
 
-.button-container {
+:host .button-container {
   display: flex;
   flex-direction: row;
   width: 100px;
