--- a/src/assets/scss/elements/_links.scss
+++ b/src/assets/scss/elements/_links.scss
@@ -1,5 +1,7 @@
 @import "../setup//variables";
 
+// Links
+
 a:focus,
 button:focus,
 .focus {
@@ -9,44 +11,41 @@ button:focus,
 
 a {
   color: $color-link;
-  border-bottom: none;
+  border-bottom: 5px solid transparent;
   cursor: pointer;
   text-decoration: none;
-  display: block;
-  padding: 10px 15px;
-  font-weight: 500;
-  font-family: inter;
-  border-radius: 3px;
-  margin-left: 10px;
-  margin-right: 10px;
-  height: 33px;
-  line-height: 14px;
-  margin-top: 2px;
-  margin-bottom: 2px;
 
   &:hover,
   &.link-hover,
   &:visited:hover {
-    color: white;
-    background-color: $color-link-active-bg;
+    color: $color-link-hover;
+    border-bottom: 5px solid $color-link-hover-bg;
+
+    &:disabled,
+    .disabled {
+      background-color: transparent !important;
+    }
   }
 
   &:active,
   &.link-active {
-    background-color: $color-link-active-bg;
-    color: black;
+    background-color: inherit;
+    color: $color-active;
+    border-bottom: 5px solid $color-link-active-bg;
   }
 
   &:focus,
   &.link-focus {
-    color: white;
-    background-color: $color-link-active-bg;
+    color: $color-link-focus;
+    background-color: transparent;
+    border-bottom: calculateRem(5) solid $color-link-focus-bg;
   }
 
   &:disabled,
   &.disabled {
     box-shadow: none !important;
     cursor: not-allowed !important;
+    //color: #000 !important; // FIXME: Hvad skal der der være her?
     outline-offset: inherit !important;
 
     &:focus {
