--- a/src/app/shared/components/status-icon/status-icon.component.html
+++ b/src/app/shared/components/status-icon/status-icon.component.html
@@ -1,5 +1,5 @@
-@switch (iconType) { @case ("default") {
+@switch (iconType) { @case ("stable") {
 <img ngSrc="../../../../assets/images/check.svg" width="25" height="25" priority />
-} @case ("warring") {
+} @case ("alert") {
 <img ngSrc="../../../../assets/images/alert.svg" width="25" height="25" priority />
 } }
